[package]
name = "fnm_rust"
version = "0.1.0"
authors = ["Gal Schlezinger <gal@spitfire.co.il>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { git = "https://github.com/clap-rs/clap.git" }
reqwest = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sys-info = "0.5.8"
tar = "0.4.26"
xz2 = "0.1.6"
semver = "0.9.0"
dirs = "2.0.2"
colored = "1.9.0"
zip = "0.5.3"
tempfile = "3.1.0"
tempdir = "0.3.7"
indoc = "0.3.4"

[dev-dependencies]
pretty_assertions = "0.6.1"
