[package]
name = "fnm"
version = "0.1.0"
authors = ["Gal Schlezinger <gal@spitfire.co.il>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = "2"
structopt = "0.3"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tar = "0.4.29"
xz2 = "0.1.6"
semver = "0.10.0"
dirs = "3.0.1"
colored = "1.9.3"
zip = "0.5.6"
tempfile = "3.1.0"
indoc = "1.0"
snafu = { version = "0.6.8", features = ["backtrace"] }
log = "0.4.11"
env_logger = "0.7.1"
atty = "0.2.14"
encoding_rs_io = "0.1.7"

[target.'cfg(windows)'.dependencies]
csv = "1.1"

[dev-dependencies]
pretty_assertions = "0.6.1"
duct = "0.13"
test-env-log = "0.2.2"
shell-escape = "0.1.5"
insta = { version = "0.16.1", features = ["backtrace"] }
serial_test = "0.4.0"

[build-dependencies]
embed-resource = "1.3.3"
